--- a/html/Index.html
+++ b/html/Index.html
@@ -12,12 +12,10 @@
     <div class="no1">
         <nav>
         <figure>
-            <img src="../images/Preview.jpg" alt="logo">
+            <img src="../images/Preview.jpg" alt="logo" class="logo">
          </figure>
-        <section class="topnav">
-            <a href="Log In.html">Log In</a>
+        <section class="topnav">  
             <a href="Order.html">Order</a>
-            <a href="Blog.html">Blog</a>
             <a href="About Us.html">About Us</a>
             <a href="Contact.html">Contact us</a>
             <a href="Menu.html">Menu</a>
