--- a/html/About Us.html
+++ b/html/About Us.html
@@ -14,9 +14,7 @@
         </section>
         <nav>
         <section class="topnav">
-            <a href="Log In.html">Log In</a>
-            <a href="Cart.html">Order</a>
-            <a href="Blog.html">Blog</a>
+            <a href="Order.html">Order</a>
             <a href="About Us.html"class="active">About Us</a>
             <a href="Contact.html">Contact us</a>
             <a href="Menu.html">Menu</a>
@@ -25,6 +23,67 @@
         </nav>
     </div>
     </header>
+    <br><br><br><br>
+    <h1 class="about">About naija cuisine</h1>
+    <br>
+    <div class="about_info">
+        <section class="about_text">
+            <p>Welcome to Naija Cuisine Cafeteria, where flavors from Nigeria come to life in every dish. Nestled in the heart of [location], our cafeteria offers a warm and inviting atmosphere where you can experience the rich and diverse culinary heritage of Nigeria.</p>
+            <p>At Naija Cuisine, we are passionate about serving authentic Nigerian cuisine made with the freshest ingredients and traditional recipes passed down through generations. From savory stews and jollof rice to mouthwatering suya and deliciously spiced meats, each dish is crafted with care to deliver an unforgettable dining experience.</p>
+            <p>Our commitment to quality extends beyond our food to our hospitality. Whether you're joining us for a quick lunch or a family dinner, our friendly staff is dedicated to providing exceptional service and ensuring every visit leaves you satisfied and eager to return.</p>
+            <p>We invite you to embark on a culinary journey through Nigeria's vibrant food culture at Naija Cuisine Cafeteria. Come taste the flavors, feel the warmth, and experience the hospitality that defines us.</p>
+        </section>
+        <section>
+            <img src="../images/Food4.jpg">
+            <img src="../images/LagosNigeria.jpg">
+            <img src="../images/food6.jpg">
+        </section>
+    </div>
+    <br><br>
+    <!--Email subscription for coupon and discount-->
+    <section>
+        <form class="subscribe">
+            <h2>SUBSCRIBE</h2>
+            <p>Sign up to hear from us about sales, coupons and events</p>
+            <input type="email" id="sub" placeholder="Email">
+            <button id="sub1" onclick="subscribe()">Sign up</button>
+        </form>
+        <!--alert message with the use of javascript-->
+        <script>
+            function subscribe(){
+                    alert("Thank you for subscribing!");
+                    }
+        </script>
+    </section>
+    <br><br>
+    <!--Cafeteria Copyright-->
+    <footer>
+        <p>Copyright &copy; 2024 naija cuisine cafeteria. All right reserved</p>
+    </footer>
+    <hr>
+    <!--Business operation hours and location-->
+    <aside class="operating">
+    <section class="hours">
+        <h3>Opening Hours</h3>
+        <p>Monday - 10am to 8pm</p>
+        <p>Tuesday - 10am to 8pm</p>
+        <p>Wednessday - 11am to 7pm</p>
+        <p>Thursday - 9am to 6pm </p>
+        <p>Friday - 9am to 6pm </p>
+        <p>Saturday - 11am to 4pm</p>
+        <p>sunday - closed</p>
+    </section>
     
+    <section class="Contact">
+        <h3>Contact</h3>
+        <p>Phone: (832) 576-8400</p>
+        <p>Email: naijacuisine@gmail.com</p>
+    </section>
+    
+    <section class="location">
+        <h3>Location</h3>
+        <p>14000 University Blvd, Sugarland</p>
+        <p>Texas 77479</p>
+    </section>
 </body>
 </html>
